Fix pinch-to-zoom when linking against the 10.11 SDK or newer.

This CL is based on Rohit's CL at https://codereview.chromium.org/2682593005.

When linking against the 10.11 SDK or newer, the OS will no longer directly call
|beginGestureWithEvent:| or |endGestureWithEvent:|.  Instead, applications must
check the event's phase inside of |magnifyWithEvent:|.  Earlier OS versions will
still call the old methods, regardless of which SDK is used.

This CL adds both compile-time and runtime checks to ensure that the "begin" and
"end" helper methods are called exactly once per gesture.

Bug: 680927
Change-Id: Ibb3fab854b28fba0f48ea766710c4aff7c066b19
Reviewed-on: https://chromium-review.googlesource.com/567241
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Rohit Rao <rohitrao@chromium.org>
Cr-Commit-Position: refs/heads/master@{#485791}
Former-commit-id: 71535232c5bfac6324fd9ef74d132d647bfff24d